--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/edit.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/edit.html
@@ -3,23 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit Blog</title>
+    <style>
+        th, td, a {
+            border: black solid 1px;
+            margin: 10px;
+        }
+    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body class="container-fluid ">
 <h3><a href="/blog">Back to List</a></h3>
-<form action="/blog/edit" method="post" th:object="${blog}">
-    <div>
+<form action="/blog/edit" method="post" th:object="${editBlog}">
+    <div class="mt-2">
         <label>Name of the blog</label>
-        <input type="text" th:field="*{title}" th:text="${blog.title}">
+        <input type="text" th:field="*{title}">
     </div>
-    <div>
+    <div class="mt-2">
         <label>Content</label>
-        <input type="text" th:field="*{content}" th:text="${blog.content}">
+        <input type="text" th:field="*{content}">
     </div>
-    <div>
+    <div class="mt-2">
+        <label>Category</label>
+        <select th:field="*{category.id}">
+            <option th:each="category1: ${categoryList}" th:text="${category1.name}"
+                    th:value="${category1.id}"></option>
+        </select>
+    </div>
+    <div class="mt-2">
         <label>Author</label>
-        <input type="text" th:field="*{author}" th:text="${blog.author}">
+        <input type="text" th:field="*{author}">
     </div>
-    <div>
+    <div class="mt-2">
         <input type="submit" class="btn btn-primary" value="Submit">
     </div>
 </form>
