--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/info.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/info.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Blog</title>
     <style>
-        th, td{
+        th, td, a {
             border: black solid 1px;
+            margin: 10px;
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,7 +14,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <table>
+    <table class="table">
         <thead>
         <tr>
             <th>ID</th>
