--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/list.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/list.html
@@ -4,43 +4,60 @@
     <meta charset="UTF-8">
     <title>Blog</title>
     <style>
-        th, td{
+        th, td, a {
             border: black solid 1px;
+            margin: 10px;
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid ">
     <h1>List Blog</h1>
-    <form action="/blog" role="search">
-        <input name="search" type="search" placeholder="Search by Title">
-        <input type="submit" class="btn btn-check">
+    <form action="/blog">
+        <input type="text" name="search" placeholder="Search by Title">
+        <button type="submit" class="btn btn-primary">
+            Search
+        </button>
     </form>
-    <a href="/blog/showCreate">Add new Blog</a>
-    <table>
+    <a href="/blog/showCreate" class="btn btn-primary">Add new Blog</a>
+    <table class="table table-hover">
         <thead>
         <tr>
             <th>ID</th>
             <th>Title</th>
             <th>Content</th>
+            <th>Category</th>
             <th>Author</th>
             <th></th>
             <th></th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="blog, iterStat:${list}">
+        <tr th:each="blog, iterStat:${blog}">
             <td th:text="${iterStat.count}"></td>
-            <td><a th:href="@{/blog/information/{id}(id=${blog.getId()})}" th:text="${blog.getTitle()}"></a></td>
-            <td th:text="${blog.getContent()}"></td>
-            <td th:text="${blog.getAuthor()}"></td>
-            <td><a th:href="@{/blog/showEdit/{id}(id=${blog.getId()})}">Edit</a></td>
-            <td><a th:href="@{/blog/delete/{id}(id=${blog.getId()})}">Delete</a></td>
+            <td><a th:href="@{/blog/information/{id}(id=${blog.getId()})}"
+                   th:text="${blog.getTitle()}"></a></td>
+            <td th:text="${blog.getCategory()?.name}"></td>
+            <td th:text="${blog.getAuthor()()}"></td>
+            <td><a th:href="@{/blog/showEdit/{id}(id=${blog.getId()})}" class="btn btn-primary">Edit</a></td>
+            <td><a th:href="@{/blog/delete/{id}(id=${blog.getId()})}" class="btn btn-primary">Delete</a></td>
         </tr>
         </tbody>
     </table>
+    <div>
+        <a th:if="${blog.hasPrevious()}"
+           th:href="@{/blog(page=${blog.number -1}, search=${search})}">
+            Previous
+        </a>
+        <a th:each="p: ${pageNumberList}" th:href="@{/blog(page=${blog.number -1}, search=${search})}"
+           th:text="${p}"></a>
+        <a th:if="${blog.hasNext()}"
+           th:href="@{/blog(page=${blog.number +1}, search=${search})}">
+            Next
+        </a>
+    </div>
 </div>
 </body>
 </html>
