--- a/ss8_validation/bai_tap/info_song/info_song/src/main/resources/templates/create.html
+++ b/ss8_validation/bai_tap/info_song/info_song/src/main/resources/templates/create.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-$END$
+<body class="container-fluid">
+<p>
+    <a th:href="@{/song/list}">
+        Back to list
+    </a>
+<form th:object="${songDTO}"
+      th:action="@{/song/create}"
+      method="post" novalidate="novalidate">
+    <div>
+        <label>Name:</label>
+        <input type="text" th:field="*{name}"/>
+        <p style="color: red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
+    </div>
+    <div>
+        <label>Singer</label>
+        <input type="text" th:field="*{singer}"/>
+        <p style="color: red" th:if="${#fields.hasErrors('singer')}" th:errors="*{singer}"></p>
+
+    </div>
+    <div>
+        <label>Category</label>
+        <input type="text" th:field="*{category}"/>
+        <p style="color: red" th:if="${#fields.hasErrors('category')}" th:errors="*{category}"></p>
+
+    </div>
+    <input type="submit" value="Save"/>
+
+</form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
