--- a/ss8_validation/bai_tap/info_song/info_song/src/main/resources/templates/list.html
+++ b/ss8_validation/bai_tap/info_song/info_song/src/main/resources/templates/list.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
-$END$
+<body class="container-fluid">
+<p>
+    <a th:href="@{/song/showCreate}">
+        Add new song
+    </a>
+<table class="table">
+    <thead>
+    <tr>
+        <th>Name</th>
+        <th>Singer</th>
+        <th>Category</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="data : ${songList}">
+        <td th:text="${data.getName()}"></td>
+        <td th:text="${data.getSinger()}"></td>
+        <td th:text="${data.getCategory()}"></td>
+        <td><a th:href="@{/song/{id}/update(id=${data.getId()})}">Edit</a></td>
+    </tr>
+    </tbody>
+</table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
