--- a/ss10_session_cookie/bai_tap/shopping_cart/src/main/resources/templates/detail.html
+++ b/ss10_session_cookie/bai_tap/shopping_cart/src/main/resources/templates/detail.html
@@ -9,7 +9,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/shop">Trang chủ</a>
+        <a class="navbar-brand" href="/product">Trang chủ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/shopping-cart">Giỏ hàng của bạn</a>
+                    <a class="nav-link" aria-current="page" href="/cart">Giỏ hàng của bạn</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">Kĩ thuật</a>
@@ -32,7 +32,7 @@
 
 
 <div class="card" style="width: 18rem;float: left;margin: 10px">
-    <a th:href="@{/product/detail/__${product.id}__}"> <img th:src="${product.img}" class="card-img-top"
+    <a th:href="@{/product/detail/__${product.id}__}"> <img th:src="" class="card-img-top"
                                                             style="width: 300px;height: 400px"></a>
     <div class="card-body">
         <h5 th:text="${product.name}" class="card-title"></h5>
