--- a/ss10_session_cookie/bai_tap/shopping_cart/src/main/resources/templates/list.html
+++ b/ss10_session_cookie/bai_tap/shopping_cart/src/main/resources/templates/list.html
@@ -17,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/shopping-cart">Giỏ hàng của bạn</a>
+                    <a class="nav-link" aria-current="page" href="/cart">Giỏ hàng của bạn</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">Kĩ thuật</a>
