--- a/ss10_session_cookie/bai_tap/shopping_cart/src/main/resources/templates/listCart.html
+++ b/ss10_session_cookie/bai_tap/shopping_cart/src/main/resources/templates/listCart.html
@@ -32,7 +32,7 @@
 
 <th:block th:each="productsMap:${cart.productsMap}">
     <div class="card" style="width: 18rem;float: left;margin: 10px">
-        <img th:src="${productsMap.key.img}" class="card-img-top" style="width: 300px;height: 400px">
+        <img th:src="${}" class="card-img-top" style="width: 300px;height: 400px">
         <div class="card-body">
             <h5 th:text="${productsMap.key.name}" class="card-title"></h5>
             <p th:text="${productsMap.key.price}" class="card-text"></p>
